hope it's over and noone will complain about half-ass report

--- a/Battle_of_the_Neighbourhoods/Copenhagen.ipynb
+++ b/Battle_of_the_Neighbourhoods/Copenhagen.ipynb
@@ -1086,6 +1086,232 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Neighbourhood</th>\n",
+       "      <th>Cluster_Labels</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Sqm_Price</th>\n",
+       "      <th>Dist_from_Center</th>\n",
+       "      <th>INDEX</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Amager Ost</td>\n",
+       "      <td>1</td>\n",
+       "      <td>55.671191</td>\n",
+       "      <td>12.632028</td>\n",
+       "      <td>0.114393</td>\n",
+       "      <td>0.384185</td>\n",
+       "      <td>3.512733</td>\n",
+       "      <td>0.084765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Amager Vest</td>\n",
+       "      <td>1</td>\n",
+       "      <td>55.637642</td>\n",
+       "      <td>12.567667</td>\n",
+       "      <td>0.075586</td>\n",
+       "      <td>0.515150</td>\n",
+       "      <td>5.475496</td>\n",
+       "      <td>0.026797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Bispebjerg</td>\n",
+       "      <td>2</td>\n",
+       "      <td>55.716863</td>\n",
+       "      <td>12.536427</td>\n",
+       "      <td>0.083375</td>\n",
+       "      <td>0.234804</td>\n",
+       "      <td>4.575243</td>\n",
+       "      <td>0.077610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Bronshoj-Husum</td>\n",
+       "      <td>1</td>\n",
+       "      <td>55.710054</td>\n",
+       "      <td>12.486824</td>\n",
+       "      <td>0.079624</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>3.667416</td>\n",
+       "      <td>0.108556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Christianshavn</td>\n",
+       "      <td>1</td>\n",
+       "      <td>55.685673</td>\n",
+       "      <td>12.609458</td>\n",
+       "      <td>0.021088</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6.463742</td>\n",
+       "      <td>0.003262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>Fredriksberg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>55.680290</td>\n",
+       "      <td>12.524036</td>\n",
+       "      <td>0.112717</td>\n",
+       "      <td>0.742550</td>\n",
+       "      <td>2.420376</td>\n",
+       "      <td>0.062716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>Indre By</td>\n",
+       "      <td>2</td>\n",
+       "      <td>55.685952</td>\n",
+       "      <td>12.587683</td>\n",
+       "      <td>0.099998</td>\n",
+       "      <td>0.859703</td>\n",
+       "      <td>2.338819</td>\n",
+       "      <td>0.049733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>Kongens Enghave</td>\n",
+       "      <td>1</td>\n",
+       "      <td>55.645375</td>\n",
+       "      <td>12.540390</td>\n",
+       "      <td>0.019875</td>\n",
+       "      <td>0.654452</td>\n",
+       "      <td>0.889813</td>\n",
+       "      <td>0.034130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>Norrebro</td>\n",
+       "      <td>2</td>\n",
+       "      <td>55.696433</td>\n",
+       "      <td>12.548778</td>\n",
+       "      <td>0.086502</td>\n",
+       "      <td>0.443041</td>\n",
+       "      <td>4.690843</td>\n",
+       "      <td>0.041623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>Osterbro</td>\n",
+       "      <td>1</td>\n",
+       "      <td>55.711846</td>\n",
+       "      <td>12.589657</td>\n",
+       "      <td>0.104425</td>\n",
+       "      <td>0.688110</td>\n",
+       "      <td>2.138634</td>\n",
+       "      <td>0.070959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>Valby</td>\n",
+       "      <td>0</td>\n",
+       "      <td>55.658006</td>\n",
+       "      <td>12.499285</td>\n",
+       "      <td>0.085245</td>\n",
+       "      <td>0.204380</td>\n",
+       "      <td>3.279061</td>\n",
+       "      <td>0.127199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>Vanlose</td>\n",
+       "      <td>1</td>\n",
+       "      <td>55.689190</td>\n",
+       "      <td>12.490109</td>\n",
+       "      <td>0.072261</td>\n",
+       "      <td>0.233559</td>\n",
+       "      <td>4.872409</td>\n",
+       "      <td>0.063498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>Vesterbro</td>\n",
+       "      <td>0</td>\n",
+       "      <td>55.664996</td>\n",
+       "      <td>12.552483</td>\n",
+       "      <td>0.044912</td>\n",
+       "      <td>0.764450</td>\n",
+       "      <td>5.477646</td>\n",
+       "      <td>0.010725</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Neighbourhood  Cluster_Labels   Latitude  Longitude  Population  \\\n",
+       "0        Amager Ost               1  55.671191  12.632028    0.114393   \n",
+       "1       Amager Vest               1  55.637642  12.567667    0.075586   \n",
+       "2        Bispebjerg               2  55.716863  12.536427    0.083375   \n",
+       "3    Bronshoj-Husum               1  55.710054  12.486824    0.079624   \n",
+       "4    Christianshavn               1  55.685673  12.609458    0.021088   \n",
+       "5      Fredriksberg               0  55.680290  12.524036    0.112717   \n",
+       "6          Indre By               2  55.685952  12.587683    0.099998   \n",
+       "7   Kongens Enghave               1  55.645375  12.540390    0.019875   \n",
+       "8          Norrebro               2  55.696433  12.548778    0.086502   \n",
+       "9          Osterbro               1  55.711846  12.589657    0.104425   \n",
+       "10            Valby               0  55.658006  12.499285    0.085245   \n",
+       "11          Vanlose               1  55.689190  12.490109    0.072261   \n",
+       "12        Vesterbro               0  55.664996  12.552483    0.044912   \n",
+       "\n",
+       "    Sqm_Price  Dist_from_Center     INDEX  \n",
+       "0    0.384185          3.512733  0.084765  \n",
+       "1    0.515150          5.475496  0.026797  \n",
+       "2    0.234804          4.575243  0.077610  \n",
+       "3    0.200000          3.667416  0.108556  \n",
+       "4    1.000000          6.463742  0.003262  \n",
+       "5    0.742550          2.420376  0.062716  \n",
+       "6    0.859703          2.338819  0.049733  \n",
+       "7    0.654452          0.889813  0.034130  \n",
+       "8    0.443041          4.690843  0.041623  \n",
+       "9    0.688110          2.138634  0.070959  \n",
+       "10   0.204380          3.279061  0.127199  \n",
+       "11   0.233559          4.872409  0.063498  \n",
+       "12   0.764450          5.477646  0.010725  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#cph_gen_data=cph_gen_data.drop(['total'],axis=1)\n",
+    "cph_gen_data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
